Avoiding breaks in accessibilty manu

--- a/assets/source/3.0/sass/navigation/_accessibility.scss
+++ b/assets/source/3.0/sass/navigation/_accessibility.scss
@@ -1,10 +1,10 @@
 .nav-accessibility.nav-horizontal {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
 
     li {
         margin-left: 16px;
+        white-space: nowrap;
         &:first-of-type {
             margin-left: 0;
         }
